--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MeatballScanner - Compare Meatball Prices in Lahti</title>
+    <title>MeatBALLS Scanner - Compare Meatball Prices in Lahti</title>
     <meta name="description" content="Find the best meatball deals in Lahti. Compare prices from Prisma, K-Market, and Lidl instantly." />
     <meta name="author" content="MeatballScanner" />
 
